add responsive design

--- a/index.css
+++ b/index.css
@@ -150,7 +150,7 @@ opacity: 0.7;
     text-align: center;
   }
 
-  @media screen and (max-width: 1400px){
+  @media screen and (min-width: 1051px){
   
     .section-one h1{
       font-size: 40px;
@@ -158,14 +158,36 @@ opacity: 0.7;
   
   }
   
-  @media screen and (max-width: 960px){
-  
+  @media screen and (min-width: 700px) and (max-width: 1050px){
+    .main-header{
+      padding: 20px;
+      text-align: center;
+    
+  }
+  .section-one h1 span{
+    font-size: 80px;
+}
     .section-one h1{
-      font-size: 28px;
+      font-size: 25px;
+      top: 20%;
+      padding: 15px;
     }
     .nav-navbar ul li{
       font-size: 18px;
     }
+    .nav-navbar{
+      padding: 10px; 
+  }
+  .nav-navbar ul{
+      width: 1000px;
+     left: -20%;
+     
+  }
+  .nav-navbar ul li{
+      font-size: 20px;
+     width: 150px;
+    
+  }
   
   }
   
@@ -208,16 +230,22 @@ opacity: 0.7;
     }
     .nav-navbar ul li{
       display: block;
-      width: 100%;
       margin: 12px 0;
     }
     .main-section h1{
       font-size: 36px;
     }
-    header, nav{
+    header, .nav-navbar{
       position: relative;
       top: 0;
     }
+    .main-header{
+     
+      padding: 15px;
     
+  }
+  .main-header h1{
+      padding: 5px 10px;
+  }
   
   }
